# usb_flash_programmer_qt

./: CMakeLists.txt  README.md  usb-flash-programmer.pro
src/: flash.cpp  flash.h
